--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="favicon.ico" type="image/ico" />
     <title>WebPack</title>
   </head>
   <body>
@@ -13,6 +14,10 @@
       <div class="logo"></div>
       <hr />
       <pre></pre>
+      <hr />
+      <div class="box">
+        <h2>Less</h2>
+      </div>
     </div>
   </body>
 </html>
